# romjanali-portfolio

./: .gitignore
backend/: manage.py  pyproject.toml  requirements.txt
backend/api/: urls.py
backend/apps/core/: views.py
backend/apps/projects/: admin.py  models.py  serializers.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_alter_project_image_alter_projectscreenshot_image.py
backend/portfolio_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/portfolio_api/settings/: base.py  development.py  production.py
backend/projects/: models.py  serializers.py  urls.py
docs/: dev-log.md
frontend/: components.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/components/layout/: Navigation.tsx
frontend/components/sections/: AboutSection.tsx  ExperienceSection.tsx  HeroSection.tsx
frontend/data/: experiences.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/src/app/blog/: page.tsx
frontend/src/components/blog/: AuthorBio.tsx  BacktoBlog.tsx  BlogCard.tsx  BlogContent.tsx  BlogGrid.tsx  BlogHeader.tsx  BlogHero.tsx  BlogNavigation.tsx  BlogPagination.tsx  BlogStats.tsx  BlogTags.tsx  NewsletterSignup.tsx  SocialShare.tsx
frontend/src/components/education/: CertificationCard.tsx  (+5 more)
frontend/src/data/: blogPostsData.ts  educationData.ts  mockBlogPostsData.ts  projectDetailsData.ts  projectsData.ts
frontend/src/hooks/: useBlogFilters.ts  useBlogPost.ts  useProjects.ts
frontend/src/lib/: api.ts
frontend/src/types/: blog.ts  education.ts  project.ts
(+24 files in other folders)
