[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Romjan Ali Portfolio Project"
authors = [
    {name = "Romjan Ali",email = "romjanvr5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-camel-case (>=1.4.2,<2.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "boto3 (>=1.39.14,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
coverage = "^7.9.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

